# repo2txt-r

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: args.rs  config.json  config.rs  lib.rs  main.rs  utils.rs  write.rs
tests/: cli.rs  integration_tests.rs
