[package]
name = "repo2txt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
ignore = "0.4.22"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0"
globset = "0.4.14"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"